i dont know how to read

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
     "name": "expo-ble-ss",
-    "slug": "expo-ble-ss",
+    "slug": "expo-ble",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "scheme": "com.example.expo-ble-ss",
+    "scheme": "com.example.expo-ble",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -46,7 +46,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.example.expo-ble",
+      "bundleIdentifier": "com.example.expo-ble-ss",
       "infoPlist": {
         "NSCameraUsageDescription": "$(PRODUCT_NAME) needs access to your Camera.",
         "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos.",
