--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
         {
           "isBackgroundEnabled": true,
           "modes": [
-            "central"
+            "central", "peripheral"
           ],
           "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
         }
